[package]
name = "nya"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json", "stream"] }
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.97"
dirs = "6.0.0"
atty = "0.2.14"
