[package]
name = "nya"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json", "stream"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
anyhow = "1.0.98"
dirs = "6.0.0"
atty = "0.2.14"
minus = { version = "5.6", features = ["dynamic_output", "search"] }
